# app/docs/openapi.yaml
@@ -1,5 +1,37 @@
 ---
 openapi: 3.1.0
+components:
+  schemas:
+    MyselfDto:
+      type: object
+      properties:
+        info:
+          $ref: "#/components/schemas/UserInfoDto"
+        locale:
+          type: string
+        features:
+          type: array
+          items:
+            type: string
+        capabilities:
+          type: object
+          additionalProperties:
+            type: string
+    UserInfoDto:
+      type: object
+      properties:
+        userId:
+          type: string
+        email:
+          type: string
+        fullName:
+          type: string
+        domain:
+          type: string
+        status:
+          type: string
+        type:
+          type: string
 paths:
   /internal/users:
     post:
@@ -16,7 +48,10 @@ paths:
           description: OK
           content:
             application/json:
-              schema: {}
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UserInfoDto"
         "400":
           description: Bad Request
       summary: Get Users
@@ -35,7 +70,8 @@ paths:
           description: OK
           content:
             application/json:
-              schema: {}
+              schema:
+                $ref: "#/components/schemas/UserInfoDto"
       summary: Get By Email
       tags:
       - User Resource
@@ -52,7 +88,8 @@ paths:
           description: OK
           content:
             application/json:
-              schema: {}
+              schema:
+                $ref: "#/components/schemas/UserInfoDto"
       summary: Get By Id
       tags:
       - User Resource
@@ -63,7 +100,8 @@ paths:
           description: OK
           content:
             application/json:
-              schema: {}
+              schema:
+                $ref: "#/components/schemas/MyselfDto"
       summary: Get Myself
       tags:
       - User Resource
